[gd_scene load_steps=6 format=2]

[ext_resource path="res://Bilder/Buttons/StartEnde/nochmalSpielen_normal.png" type="Texture" id=1]
[ext_resource path="res://Bilder/Buttons/StartEnde/nochmalSpielen_pressed.png" type="Texture" id=2]
[ext_resource path="res://Skripte/Optionen/TextureButton.gd" type="Script" id=3]
[ext_resource path="res://Szenen/Oberflaeche/Endbildschirm_Gewonnen.tscn" type="PackedScene" id=4]
[ext_resource path="res://Szenen/Oberflaeche/Endbildschirm_Verloren.tscn" type="PackedScene" id=5]

[node name="Ende" type="Node2D"]

[node name="NochmalSpielen" type="TextureButton" parent="."]
pause_mode = 2
margin_left = 95.2266
margin_top = 555.035
margin_right = 351.227
margin_bottom = 611.035
texture_normal = ExtResource( 1 )
texture_pressed = ExtResource( 2 )
script = ExtResource( 3 )

[node name="EndeGewonnen" parent="." instance=ExtResource( 4 )]

[node name="EndeVerloren" parent="." instance=ExtResource( 5 )]
position = Vector2( 3.98056, -1.32684 )
[connection signal="button_up" from="NochmalSpielen" to="NochmalSpielen" method="_on_NochmalSpielen_button_up"]
