[gd_scene load_steps=15 format=2]

[ext_resource path="res://Skripte/Spielverwaltung/Informations√ºbertragung.gd" type="Script" id=1]
[ext_resource path="res://Bilder/TileMaps/Spieloberflaeche.tres" type="TileSet" id=2]
[ext_resource path="res://Bilder/Hintergruende/Verlauf.png" type="Texture" id=3]
[ext_resource path="res://Szenen/Oberflaeche/Startbildschirm.tscn" type="PackedScene" id=4]
[ext_resource path="res://Szenen/Oberflaeche/Anleitung.tscn" type="PackedScene" id=5]
[ext_resource path="res://Szenen/Oberflaeche/Spiel.tscn" type="PackedScene" id=6]
[ext_resource path="res://Skripte/Spielverwaltung/Logik.gd" type="Script" id=7]
[ext_resource path="res://Szenen/Oberflaeche/Ende.tscn" type="PackedScene" id=8]
[ext_resource path="res://Bilder/Buttons/Spiel/Zahnrad.png" type="Texture" id=9]
[ext_resource path="res://Skripte/Optionen/TextureButton.gd" type="Script" id=10]
[ext_resource path="res://Bilder/Buttons/Spiel/TonAus.png" type="Texture" id=11]
[ext_resource path="res://Bilder/Buttons/Spiel/TonAn.png" type="Texture" id=12]
[ext_resource path="res://Skripte/Optionen/CheckButton.gd" type="Script" id=13]
[ext_resource path="res://Szenen/Oberflaeche/AlleOptionen.tscn" type="PackedScene" id=14]

[node name="Main" type="Node2D"]
script = ExtResource( 1 )

[node name="Hintergrund" type="TileMap" parent="."]
tile_set = ExtResource( 2 )
format = 1
tile_data = PoolIntArray( 0, 13, 0, 1, 13, 0, 2, 13, 0, 3, 13, 0, 4, 13, 0, 5, 13, 0, 6, 13, 0, 8, 0, 0, 10, 0, 0, 11, 0, 0, 65536, 13, 0, 65537, 13, 0, 65538, 13, 0, 65539, 13, 0, 65540, 13, 0, 65541, 13, 0, 65542, 13, 0, 131072, 13, 0, 131073, 13, 0, 131074, 13, 0, 131075, 13, 0, 131076, 13, 0, 131077, 13, 0, 131078, 13, 0, 196608, 13, 0, 196609, 13, 0, 196610, 13, 0, 196611, 13, 0, 196612, 13, 0, 196613, 13, 0, 196614, 13, 0, 262144, 13, 0, 262145, 13, 0, 262146, 13, 0, 262147, 13, 0, 262148, 13, 0, 262149, 13, 0, 262150, 13, 0, 327680, 13, 0, 327681, 13, 0, 327682, 13, 0, 327683, 13, 0, 327684, 13, 0, 327685, 13, 0, 327686, 13, 0, 393216, 13, 0, 393217, 13, 0, 393218, 13, 0, 393219, 13, 0, 393220, 13, 0, 393221, 13, 0, 393222, 13, 0, 458752, 13, 0, 458753, 13, 0, 458754, 13, 0, 458755, 13, 0, 458756, 13, 0, 458757, 13, 0, 458758, 13, 0, 524288, 1, 0, 524289, 1, 0, 524290, 1, 0, 524291, 1, 0, 524292, 1, 0, 524293, 1, 0, 524294, 1, 0, 589824, 10, 0, 589825, 10, 0, 589826, 10, 0, 589827, 10, 0, 589828, 10, 0, 589829, 10, 0, 589830, 10, 0 )

[node name="Verlauf" type="Sprite" parent="Hintergrund"]
position = Vector2( 223.326, 254.237 )
texture = ExtResource( 3 )

[node name="Start" parent="." instance=ExtResource( 4 )]

[node name="Anleitung" parent="." instance=ExtResource( 5 )]
visible = false

[node name="Spiel" parent="." instance=ExtResource( 6 )]
visible = false

[node name="Logik" parent="Spiel" index="0"]
script = ExtResource( 7 )

[node name="Ende" parent="." instance=ExtResource( 8 )]
editor/display_folded = true
visible = false

[node name="EndeVerloren" parent="Ende" index="2"]
visible = false

[node name="Optionen" type="TextureButton" parent="."]
pause_mode = 2
margin_left = 387.962
margin_top = 12.5286
margin_right = 435.962
margin_bottom = 60.5286
texture_normal = ExtResource( 9 )
script = ExtResource( 10 )

[node name="Sound" type="CheckButton" parent="."]
pause_mode = 2
margin_left = 312.063
margin_top = 11.3391
margin_right = 388.063
margin_bottom = 64.3391
custom_icons/off = ExtResource( 11 )
custom_icons/on = ExtResource( 12 )
pressed = true
script = ExtResource( 13 )

[node name="AlleOptionen" parent="." instance=ExtResource( 14 )]
pause_mode = 2
visible = false

[node name="Seite1-Slider" parent="AlleOptionen" index="1"]
editor/display_folded = true

[node name="Seite2-Editoren" parent="AlleOptionen" index="2"]
editor/display_folded = false
[connection signal="button_up" from="Optionen" to="Optionen" method="_on_Optionen_button_up"]
[connection signal="toggled" from="Sound" to="Sound" method="_on_Sound_toggled"]
[connection signal="button_up" from="AlleOptionen/Seite2-Editoren/2von3/Seite1" to="AlleOptionen" method="_on_Seite1_button_up"]
[connection signal="button_up" from="AlleOptionen/Seite2-Editoren/2von3/Seite3" to="AlleOptionen" method="_on_Seite3_button_up"]
[connection signal="button_up" from="AlleOptionen/Seite3-RandomCoin/3von3/Seite2" to="AlleOptionen" method="_on_Seite2_button_up"]

[editable path="Start"]

[editable path="Spiel"]

[editable path="Ende"]

[editable path="AlleOptionen"]

[editable path="AlleOptionen/Seite1-Slider"]

[editable path="AlleOptionen/Seite2-Editoren"]

[editable path="AlleOptionen/Seite3-RandomCoin"]
