[gd_scene load_steps=6 format=2]

[ext_resource path="res://Bilder/Buttons/StartEnde/spielStarten_normal.png" type="Texture" id=1]
[ext_resource path="res://Bilder/Buttons/StartEnde/spielStarten_pressed.png" type="Texture" id=2]
[ext_resource path="res://Skripte/Optionen/TextureButton.gd" type="Script" id=3]
[ext_resource path="res://Bilder/Hintergruende/Bloinz2D.png" type="Texture" id=4]
[ext_resource path="res://Bilder/Standardspielfiguren/Spielfiguren/Blob_3_gerade.png" type="Texture" id=5]

[node name="Start" type="Node2D"]

[node name="SpielStarten" type="TextureButton" parent="."]
margin_left = 96.0
margin_top = 555.859
margin_right = 350.105
margin_bottom = 611.859
texture_normal = ExtResource( 1 )
texture_pressed = ExtResource( 2 )
script = ExtResource( 3 )

[node name="Bloinz2D" type="Sprite" parent="."]
position = Vector2( 224, 320.397 )
scale = Vector2( 4, 4 )
texture = ExtResource( 4 )

[node name="Blob_3_gerade" type="Sprite" parent="."]
position = Vector2( 284.019, 472.022 )
texture = ExtResource( 5 )
[connection signal="button_up" from="SpielStarten" to="SpielStarten" method="_on_SpielStarten_button_up"]
